always use BOMInputStream in AbstractCsvWell